sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:13: error: illegal start of simple expression
      if (a>v)) {
              ^